[package]
name = "mh_z19b"
version = "0.1.0"
authors = ["Peter Holak"]
edition = "2018"

[features]
default = ["serial"]
hal = ["embedded-hal"]
serial = ["serialport", "std"]
std = []

[dependencies]
serialport = { version = "3.2.0", optional = true }
embedded-hal = { version = "0.2.2", optional = true }
